fixed bottom margin of burger menu on mobile

--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -5,6 +5,7 @@
   font-weight: 700;
 
   &__top {
+    margin-bottom: 32px;
     @include on-tablet {
       margin-bottom: 56px;
     }
